--- a/package.json
+++ b/package.json
@@ -6,10 +6,23 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "anychart-react": "^1.4.1",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
+    "net": "^1.0.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "recharts": "^2.1.10",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
+    "web-vitals": "^2.1.4",
+    "websocket": "^1.0.34",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
